crates/lang-parse/tests/snapshots/parser__parser_units.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x9f4940a23115a14d",
        output_hash: "0x2a9e69beae9b24a4",
        tree: (
            span: (
                start: 0,
                end: 44,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 44,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 44,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: BinaryOperation((
                        span: (
                            start: 0,
                            end: 44,
                        ),
                        lhs: BinaryOperation((
                            span: (
                                start: 0,
                                end: 40,
                            ),
                            lhs: BinaryOperation((
                                span: (
                                    start: 0,
                                    end: 35,
                                ),
                                lhs: BinaryOperation((
                                    span: (
                                        start: 0,
                                        end: 21,
                                    ),
                                    lhs: BinaryOperation((
                                        span: (
                                            start: 0,
                                            end: 8,
                                        ),
                                        lhs: Literal((
                                            span: (
                                                start: 0,
                                                end: 3,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([
                                                    Whitespace((" ")),
                                                ]),
                                            ),
                                            literal: Quantity((
                                                span: (
                                                    start: 0,
                                                    end: 3,
                                                ),
                                                value: "0",
                                                unit: (
                                                    span: (
                                                        start: 1,
                                                        end: 2,
                                                    ),
                                                    name: "\"",
                                                ),
                                            )),
                                        )),
                                        op: (
                                            span: (
                                                start: 3,
                                                end: 4,
                                            ),
                                            value: Add,
                                        ),
                                        rhs: Literal((
                                            span: (
                                                start: 5,
                                                end: 8,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([
                                                    Whitespace((" ")),
                                                ]),
                                            ),
                                            literal: Quantity((
                                                span: (
                                                    start: 5,
                                                    end: 8,
                                                ),
                                                value: "1",
                                                unit: (
                                                    span: (
                                                        start: 6,
                                                        end: 7,
                                                    ),
                                                    name: "%",
                                                ),
                                            )),
                                        )),
                                    )),
                                    op: (
                                        span: (
                                            start: 8,
                                            end: 9,
                                        ),
                                        value: Add,
                                    ),
                                    rhs: BinaryOperation((
                                        span: (
                                            start: 10,
                                            end: 21,
                                        ),
                                        lhs: Literal((
                                            span: (
                                                start: 10,
                                                end: 14,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([
                                                    Whitespace((" ")),
                                                ]),
                                            ),
                                            literal: Quantity((
                                                span: (
                                                    start: 10,
                                                    end: 14,
                                                ),
                                                value: "2",
                                                unit: (
                                                    span: (
                                                        start: 11,
                                                        end: 13,
                                                    ),
                                                    name: "mm",
                                                ),
                                            )),
                                        )),
                                        op: (
                                            span: (
                                                start: 14,
                                                end: 15,
                                            ),
                                            value: Divide,
                                        ),
                                        rhs: Literal((
                                            span: (
                                                start: 16,
                                                end: 21,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([
                                                    Whitespace((" ")),
                                                ]),
                                            ),
                                            literal: Quantity((
                                                span: (
                                                    start: 16,
                                                    end: 21,
                                                ),
                                                value: "3",
                                                unit: (
                                                    span: (
                                                        start: 17,
                                                        end: 20,
                                                    ),
                                                    name: "mm2",
                                                ),
                                            )),
                                        )),
                                    )),
                                )),
                                op: (
                                    span: (
                                        start: 21,
                                        end: 22,
                                    ),
                                    value: Subtract,
                                ),
                                rhs: BinaryOperation((
                                    span: (
                                        start: 23,
                                        end: 35,
                                    ),
                                    lhs: Literal((
                                        span: (
                                            start: 23,
                                            end: 29,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([
                                                Whitespace((" ")),
                                            ]),
                                        ),
                                        literal: Quantity((
                                            span: (
                                                start: 23,
                                                end: 29,
                                            ),
                                            value: "4",
                                            unit: (
                                                span: (
                                                    start: 24,
                                                    end: 28,
                                                ),
                                                name: "mm³",
                                            ),
                                        )),
                                    )),
                                    op: (
                                        span: (
                                            start: 29,
                                            end: 30,
                                        ),
                                        value: Multiply,
                                    ),
                                    rhs: Literal((
                                        span: (
                                            start: 31,
                                            end: 35,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([
                                                Whitespace((" ")),
                                            ]),
                                        ),
                                        literal: Quantity((
                                            span: (
                                                start: 31,
                                                end: 35,
                                            ),
                                            value: "1",
                                            unit: (
                                                span: (
                                                    start: 32,
                                                    end: 34,
                                                ),
                                                name: "°",
                                            ),
                                        )),
                                    )),
                                )),
                            )),
                            op: (
                                span: (
                                    start: 35,
                                    end: 36,
                                ),
                                value: Add,
                            ),
                            rhs: Literal((
                                span: (
                                    start: 37,
                                    end: 40,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([
                                        Whitespace((" ")),
                                    ]),
                                ),
                                literal: Quantity((
                                    span: (
                                        start: 37,
                                        end: 40,
                                    ),
                                    value: "1",
                                    unit: (
                                        span: (
                                            start: 38,
                                            end: 39,
                                        ),
                                        name: "\"",
                                    ),
                                )),
                            )),
                        )),
                        op: (
                            span: (
                                start: 40,
                                end: 41,
                            ),
                            value: Subtract,
                        ),
                        rhs: Literal((
                            span: (
                                start: 42,
                                end: 44,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            literal: Quantity((
                                span: (
                                    start: 42,
                                    end: 44,
                                ),
                                value: "2",
                                unit: (
                                    span: (
                                        start: 43,
                                        end: 44,
                                    ),
                                    name: "\'",
                                ),
                            )),
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
