crates/lang-parse/tests/snapshots/parser__parser_use as.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xeed08d996e1a087a",
        output_hash: "0xd4b34f762ed29d1a",
        tree: (
            span: (
                start: 0,
                end: 27,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 27,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Use((
                        span: (
                            start: 0,
                            end: 26,
                        ),
                        attr: ([]),
                        keyword_span: (
                            start: 4,
                            end: 7,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        vis: Some((
                            span: (
                                start: 0,
                                end: 3,
                            ),
                            value: Public,
                        )),
                        name: (
                            span: (
                                start: 8,
                                end: 17,
                            ),
                            prefix: None,
                            extras: (
                                leading: ([]),
                                trailing: ([
                                    Whitespace((" ")),
                                ]),
                            ),
                            parts: [
                                Identifier((
                                    span: (
                                        start: 8,
                                        end: 11,
                                    ),
                                    name: "foo",
                                )),
                                Identifier((
                                    span: (
                                        start: 13,
                                        end: 16,
                                    ),
                                    name: "bar",
                                )),
                            ],
                        ),
                        use_as: Some((
                            span: (
                                start: 20,
                                end: 26,
                            ),
                            name: "foobar",
                        )),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
