crates/lang-parse/tests/snapshots/parser__parser_use glob.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x85eff61335443b56",
        output_hash: "0x82ade1b71daeedbc",
        tree: (
            span: (
                start: 0,
                end: 16,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 16,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Use((
                        span: (
                            start: 0,
                            end: 15,
                        ),
                        attr: ([]),
                        keyword_span: (
                            start: 0,
                            end: 3,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        vis: None,
                        name: (
                            span: (
                                start: 4,
                                end: 15,
                            ),
                            prefix: None,
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            parts: [
                                Identifier((
                                    span: (
                                        start: 4,
                                        end: 7,
                                    ),
                                    name: "foo",
                                )),
                                Identifier((
                                    span: (
                                        start: 9,
                                        end: 12,
                                    ),
                                    name: "bar",
                                )),
                                Glob((
                                    start: 14,
                                    end: 15,
                                )),
                            ],
                        ),
                        use_as: None,
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
