crates/lang-parse/tests/snapshots/parser__parser_use prefix.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x6aaa2a15eeeef1c",
        output_hash: "0x3b32addbef14d0a",
        tree: (
            span: (
                start: 0,
                end: 15,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 15,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Use((
                        span: (
                            start: 0,
                            end: 14,
                        ),
                        attr: ([]),
                        keyword_span: (
                            start: 0,
                            end: 3,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        vis: None,
                        name: (
                            span: (
                                start: 4,
                                end: 14,
                            ),
                            prefix: Some((
                                start: 4,
                                end: 6,
                            )),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            parts: [
                                Identifier((
                                    span: (
                                        start: 6,
                                        end: 9,
                                    ),
                                    name: "foo",
                                )),
                                Identifier((
                                    span: (
                                        start: 11,
                                        end: 14,
                                    ),
                                    name: "bar",
                                )),
                            ],
                        ),
                        use_as: None,
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
