crates/lang-parse/tests/snapshots/parser__parser_use.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xfa0a3ca42c3cddcf",
        output_hash: "0xe8b75f3b0ea5e8b4",
        tree: (
            span: (
                start: 0,
                end: 8,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 8,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Use((
                        span: (
                            start: 0,
                            end: 7,
                        ),
                        attr: ([]),
                        keyword_span: (
                            start: 0,
                            end: 3,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        vis: None,
                        name: (
                            span: (
                                start: 4,
                                end: 7,
                            ),
                            prefix: None,
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            parts: [
                                Identifier((
                                    span: (
                                        start: 4,
                                        end: 7,
                                    ),
                                    name: "foo",
                                )),
                            ],
                        ),
                        use_as: None,
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
